// Vitest Snapshot v1

exports[`GroupCard > should render empty group 1`] = `
<div>
  <div
    class="px-4 py-3 bg-red-50"
    data-testid="group-card"
  >
    <div
      class="flex items-center justify-between space-x-3"
    >
      <h3
        class="text-sm font-semibold uppercase text-red-600 truncate"
      >
        Group 1
      </h3>
      <div
        class="flex flex-shrink-0 items-center space-x-1"
      >
        <button
          class="rounded-md px-2 py-1 text-sm hover:bg-red-100 flex-shrink-0"
        >
          Add Item
        </button>
        <button
          class="rounded-md p-1 hover:bg-red-100"
          data-testid="group-card-settings"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 10a1.5 1.5 0 113 0 1.5 1.5 0 01-3 0zM8.5 10a1.5 1.5 0 113 0 1.5 1.5 0 01-3 0zM15.5 8.5a1.5 1.5 0 100 3 1.5 1.5 0 000-3z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`GroupCard > should render successfully 1`] = `
<div>
  <div
    class="px-4 py-3 bg-red-50"
    data-testid="group-card"
  >
    <div
      class="flex items-center justify-between space-x-3"
    >
      <h3
        class="text-sm font-semibold uppercase text-red-600 truncate"
      >
        Group 1
      </h3>
      <div
        class="flex flex-shrink-0 items-center space-x-1"
      >
        <button
          class="rounded-md px-2 py-1 text-sm hover:bg-red-100 flex-shrink-0"
        >
          Add Item
        </button>
        <button
          class="rounded-md p-1 hover:bg-red-100"
          data-testid="group-card-settings"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 10a1.5 1.5 0 113 0 1.5 1.5 0 01-3 0zM8.5 10a1.5 1.5 0 113 0 1.5 1.5 0 01-3 0zM15.5 8.5a1.5 1.5 0 100 3 1.5 1.5 0 000-3z"
            />
          </svg>
        </button>
      </div>
    </div>
    <ol
      class="space-y-1 pt-2 pb-1"
      data-testid="group-card-items"
    >
      <li
        class="flex items-center justify-between space-x-3"
        data-testid="group-card-items-item"
      >
        <span
          class="truncate"
        >
          Item 1
        </span>
        <button
          class="rounded-md p-1 text-sm text-red-500 hover:bg-red-100"
          data-testid="delete-button"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 12H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </li>
    </ol>
  </div>
</div>
`;
